<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.ugent.oomt.newsfeed.DetailFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_title"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:padding="@dimen/padding"
        tools:text="@string/placeholder"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">
            <TextView android:text="@string/id"
                android:textStyle="bold"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:minHeight="@dimen/detail_row_height"
                android:paddingEnd="@dimen/text_margin"
                android:paddingStart="0dp"
                app:layout_gravity="end" />
            <TextView android:id="@+id/itemId" tools:text="@string/placeholder"
                android:minHeight="@dimen/detail_row_height"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:textAllCaps="false"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:textAlignment="textStart" />

            <TextView android:text="@string/source"
                android:textStyle="bold"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:minHeight="@dimen/detail_row_height"
                android:paddingEnd="@dimen/text_margin"
                android:paddingStart="0dp"
                app:layout_gravity="end" />
            <TextView android:id="@+id/source" tools:text="@string/placeholder"
                android:minHeight="@dimen/detail_row_height"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:textAllCaps="false"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:textAlignment="textStart" />

            <TextView android:text="@string/type"
                android:textStyle="bold"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:minHeight="@dimen/detail_row_height"
                android:paddingEnd="@dimen/text_margin"
                android:paddingStart="0dp"
                app:layout_gravity="end" />
            <TextView android:id="@+id/type" tools:text="@string/placeholder"
                android:minHeight="@dimen/detail_row_height"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:textAllCaps="false"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:textAlignment="textStart" />

            <TextView android:text="@string/transport"
                android:textStyle="bold"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:minHeight="@dimen/detail_row_height"
                android:paddingEnd="@dimen/text_margin"
                android:paddingStart="0dp"
                app:layout_gravity="end" />
            <TextView android:id="@+id/transport" tools:text="@string/placeholder"
                android:minHeight="@dimen/detail_row_height"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:textAllCaps="false"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:textAlignment="textStart" />

            <TextView android:text="@string/alarm_name"
                android:textStyle="bold"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:minHeight="@dimen/detail_row_height"
                android:paddingEnd="@dimen/text_margin"
                android:paddingStart="0dp"
                app:layout_gravity="end" />
            <TextView android:id="@+id/alarmName" tools:text="@string/placeholder"
                android:minHeight="@dimen/detail_row_height"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:textAllCaps="false"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:textAlignment="textStart" />

            <TextView android:text="@string/message"
                android:textStyle="bold"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:minHeight="@dimen/detail_row_height"
                android:paddingEnd="@dimen/text_margin"
                android:paddingStart="0dp"
                app:layout_gravity="end" />
            <TextView android:id="@+id/message" tools:text="@string/placeholder"
                android:minHeight="@dimen/detail_row_height"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:textAllCaps="false"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:textAlignment="textStart" />

            <TextView android:text="@string/longitude"
                android:textStyle="bold"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:minHeight="@dimen/detail_row_height"
                android:paddingEnd="@dimen/text_margin"
                android:paddingStart="0dp"
                app:layout_gravity="end" />
            <TextView android:id="@+id/longitude" tools:text="@string/placeholder"
                android:minHeight="@dimen/detail_row_height"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:textAllCaps="false"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:textAlignment="textStart" />

            <TextView android:text="@string/latitude"
                android:textStyle="bold"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:minHeight="@dimen/detail_row_height"
                android:paddingEnd="@dimen/text_margin"
                android:paddingStart="0dp"
                app:layout_gravity="end" />
            <TextView android:id="@+id/latitude" tools:text="@string/placeholder"
                android:minHeight="@dimen/detail_row_height"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:textAllCaps="false"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:textAlignment="textStart" />

            <TextView android:text="@string/timestamp"
                android:textStyle="bold"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:minHeight="@dimen/detail_row_height"
                android:paddingEnd="@dimen/text_margin"
                android:paddingStart="0dp"
                app:layout_gravity="end" />
            <TextView android:id="@+id/timestamp" tools:text="@string/placeholder"
                android:minHeight="@dimen/detail_row_height"
                android:paddingBottom="@dimen/text_topbottom_margin"
                android:paddingTop="@dimen/text_topbottom_margin"
                android:textAllCaps="false"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                android:textAlignment="textStart" />
        </android.support.v7.widget.GridLayout>
    </ScrollView>

</LinearLayout>
